--- a/Anime Website/AOT.html
+++ b/Anime Website/AOT.html
@@ -3,8 +3,8 @@
     <head>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <link rel="stylesheet" href="../CSS/SL.css">
-        <title>Hetuk Anime Website Solo Leveling Page</title>
+        <link rel="stylesheet" href="./CSS/AOT.css">
+        <title>Hetuk Anime Website Attack On Titan Page</title>
     </head>
     <body>
         <header class="title">
@@ -91,51 +91,47 @@
                 </ul>
             </div>
             <div class="child2">
-                <img src="../utils/Facebook.svg" alt="Facebook Logo">
-                <img src="../utils/Youtube.png" alt="Youtube Logo"
+                <img src="./utils/Facebook.svg" alt="Facebook Logo">
+                <img src="./utils/Youtube.png" alt="Youtube Logo"
                     class="image">
             </div>
         </nav>
         <div class="parent">
             <div class="child3">
                 <div class="info">
-                    <p class="p1">Crunchyroll</p><span>•</span>
+                    <p class="p1">Amazon Prime Video</p><span>•</span>
                     <p class="p2">Animated Series</p><span>•</span>
                     <p class="p3">Anime</p><span>•</span>
                     <p class="p4">completed</p><span>•</span>
                     <p class="p5">hindi dub</p><span>•</span>
+                    <p class="p5">kannada</p><span>•</span>
                     <p class="p6">tamil dub</p><span>•</span>
                     <p class="p7">telugu dub</p>
                 </div>
-                <h5>Solo Leveling Season 2: Arise from the Shadow
-                    [Hindi-<br>Tamil-Telugu-Eng-Jap] Multi Audio 480p, 720p &
-                    1080p<br>
-                    HD WEB-DL | 10bit HEVC ESub</h5>
+                <h5>Attack on Titan Season 1 Episodes Multi Audio [Hindi-<br>Tamil-Telugu-Kan-Eng-Jap] 480p, 720p & 1080p HD<br> WEB-DL | 10bit HEVC ESub</h5>
                 <div class="time">
                     <div class="date">
-                        <img src="../utils/Clock.svg"
+                        <img src="./utils/Clock.svg"
                             alt="clock image" class="clock">
                         <p>April 20, 2025</p>
                     </div>
                     <div class="source">
-                        <img src="../utils/Profile.svg"
+                        <img src="./utils/Profile.svg"
                             alt="Source Image" class="profile">
                         <p>Hetuk Patel</p>
                     </div>
                 </div>
-                <h4>||Untouched AAC 2.0 Multi Audio Crunchyroll Dub||</h4>
-                <h4 class="black">[1080p | 720p | 480p | Hindi - Tamil - Telugu
-                    - English -
-                    Japanese | WEB-DL | ESub]</h4>
-                <img src="../utils/Solo Leveling.jpg" alt="Solo Leveling" class="image1">
+                <h4>||Untouched AMZN DD+2.0 224kbps Multi Audio (Anime Times Dub)||</h4>
+                <h4 class="black">[Multi Audio | Hindi - Tamil - Telugu - Kannada - English - Japanese | WEB-DL]</h4>
+                <img src="./utils/Attack On Titan.jpg" alt="Attack On Titan" class="image1">
                 <div class="anime_info">
                 <div class="genre">
                     <p class="red">Genre:</p>
-                    <p class="bold">Animation | Action | Adventure</p>
+                    <p class="bold">Animation | Adventure | Drama</p>
                 </div>
                 <div class="org">
                     <p class="red">Org. Run:</p>
-                    <p class="bold">TV Series(2024-2025)</p>
+                    <p class="bold">TV Series(2013-2023)</p>
                 </div>
                 <div class="run">
                     <p class="red">Running Time:</p>
@@ -143,19 +139,19 @@
                 </div>
                 <div class="lang">
                     <p class="red">Language:</p>
-                    <p class="bold">Japanese - English - Tamil - Telugu - <a class="green">Hindi 2.0</a> [Org. CR WEB Audio]</p>
+                    <p class="bold"> Japanese - English - Kannada - Tamil - Telugu - <a class="green">Hindi DD+2.0</a> [Org. AMZN Audio]</p>
                 </div>
                 <div class="episodes">
                     <p class="red">Episodes:</p>
-                    <p class="bold">13</p>
+                    <p class="bold">25</p>
                 </div>
                 <div class="sub">
                     <p class="red">Subtitle:</p>
-                    <p class="bold">English {ASS} [Softcoded]</p>
+                    <p class="bold">English [Softcoded]</p>
                 </div>
                 <div class="quality">
                     <p class="red">Quality:</p>
-                    <p class="bold">1080p FHD | 720p HD | 480p WEB-DL</p>
+                    <p class="bold">1080p FHD | 720p HD | 480p AMZN WEB-DL</p>
                 </div>
                 <div class="encoder">
                     <p class="red">Encoder:</p>
@@ -163,7 +159,18 @@
                 </div>
                 <div class="synopsis">
                     <p class="red">Synopsis:</p>
-                    <p class="bold_1">In a world of gifted hunters and monsters, a weak hunter Sung Jinwoo gains extraordinary powers through a <br>mysterious program, leading him to become one of the strongest hunters and conquering even the strongest dungeons.</p>
+                    <p class="bold_1">After his hometown is destroyed, young Eren Jaeger vows to cleanse the earth of the giant humanoid Titans that<br> have brought humanity to the brink of extinction.</p>
+                </div>
+                <div class="track">
+                    <p class="track1">
+                        Audio Track Info For 1080p HEVC [HQ]:-
+                    </p>
+                    <p class="track1_1">Track 1:- Hindi AMZN E-AC3 2.0 224kbps</p>
+                    <p class="track2">Track 2:- Tamil AMZN E-AC3 2.0 224kbps</p>
+                    <p class="track2">Track 3:- Telugu AMZN E-AC3 2.0 224kbps</p>
+                    <p class="track2">Track 4:- Kannada AMZN E-AC3 2.0 224kbps</p>
+                    <p class="track2">Track 5:- English AMZN E-AC3 2.0 224kbps</p>
+                    <p class="track2">Track 6:- Japanese AMZN E-AC3 2.0 224kbps</p>
                 </div>
             </div>
             <div class="screenshot">
@@ -171,9 +178,10 @@
                 <p class="bold_2">+</p>
             </div>
             <hr class="ss">
-            <p class="sl">||Download Solo Leveling Season 2 Episodes in Hindi Multi Audio||</p>
+            <p class="sl">||Download Attack on Titan Season 1 Episodes in Hindi Multi Audio||</p>
             <div class="episode1">
-                <p>season 2</p>
+                <h5 class="none"><b>Note:</b> 1080p HEVC Videos Have E-AC3 2.0 Untouched AMZN Multi Audios. Episodes Arranged A/C to AMZN Release.</h5>
+                <p>season 1</p>
                 <div class="episode1_2 open-popup-btn">
                     <p class="small_1">Episode 1</p>
                     <p class="bold_2">+</p>
@@ -223,7 +231,55 @@
                     <p class="bold_2">+</p>
                 </div>
                 <div class="episode1_1 open-popup-btn">
-                    <p class="small_1">Episode 13 {NEW}</p>
+                    <p class="small_1">Episode 13</p>
+                    <p class="bold_2">+</p>
+                </div>
+                <div class="episode1_1 open-popup-btn">
+                    <p class="small_1">Episode 14</p>
+                    <p class="bold_2">+</p>
+                </div>
+                <div class="episode1_1 open-popup-btn">
+                    <p class="small_1">Episode 15</p>
+                    <p class="bold_2">+</p>
+                </div>
+                <div class="episode1_1 open-popup-btn">
+                    <p class="small_1">Episode 16</p>
+                    <p class="bold_2">+</p>
+                </div>
+                <div class="episode1_1 open-popup-btn">
+                    <p class="small_1">Episode 17</p>
+                    <p class="bold_2">+</p>
+                </div>
+                <div class="episode1_1 open-popup-btn">
+                    <p class="small_1">Episode 18</p>
+                    <p class="bold_2">+</p>
+                </div>
+                <div class="episode1_1 open-popup-btn">
+                    <p class="small_1">Episode 19</p>
+                    <p class="bold_2">+</p>
+                </div>
+                <div class="episode1_1 open-popup-btn">
+                    <p class="small_1">Episode 20</p>
+                    <p class="bold_2">+</p>
+                </div>
+                <div class="episode1_1 open-popup-btn">
+                    <p class="small_1">Episode 21</p>
+                    <p class="bold_2">+</p>
+                </div>
+                <div class="episode1_1 open-popup-btn">
+                    <p class="small_1">Episode 22</p>
+                    <p class="bold_2">+</p>
+                </div>
+                <div class="episode1_1 open-popup-btn">
+                    <p class="small_1">Episode 23</p>
+                    <p class="bold_2">+</p>
+                </div>
+                <div class="episode1_1 open-popup-btn">
+                    <p class="small_1">Episode 24 {NEW}</p>
+                    <p class="bold_2">+</p>
+                </div>
+                <div class="episode1_1 open-popup-btn">
+                    <p class="small_1">Episode 25 {NEW}</p>
                     <p class="bold_2">+</p>
                 </div>
             </div>
@@ -235,13 +291,25 @@
             <div class="zip1">
             <p class="zip">||Complete Pack Single Zip File||</p>
             <div class="episode1_3 open-popup-btn">
-                <p class="small_1">Zip Files Single Download Links</p>
+                <p class="small_1">480p SD Complete Pack</p>
+                <p class="bold_2">+</p>
+            </div>
+            <div class="episode1_3 open-popup-btn">
+                <p class="small_1">720p HD Complete Pack</p>
+                <p class="bold_2">+</p>
+            </div>
+            <div class="episode1_3 open-popup-btn">
+                <p class="small_1">720p HEVC Complete Pack</p>
+                <p class="bold_2">+</p>
+            </div>
+            <div class="episode1_3 open-popup-btn">
+                <p class="small_1">1080p HEVC Complete Pack</p>
                 <p class="bold_2">+</p>
             </div>
             </div>
-            <p class="add">COMPLETE SEASON 2 ADDED</p>
-            <p class="season1">Download Season 1</p>
-            <p class="watch_on">Watch On Crunchyroll & Support Anime in India.</p>
+            <p class="add">COMPLETE SEASON 1 ADDED</p>
+            <p class="season1">Download Season 2</p>
+            <p class="watch_on">Watch On Amazon Prime - Animetimes Channel & Support Anime in India.</p>
             <div class="click">
                 <p>how to download movies and series from here?</p>
                 <p class="red">click here</p>
@@ -272,7 +340,7 @@
             <div class="like_anime">
                 <div class="anime1">
                     <a href="./DN.html">
-                        <img src="../utils/Death Note(1).jpg" alt="Death Note">
+                        <img src="./utils/Death Note(1).jpg" alt="Death Note">
                     </a>
                     <a href="./DN.html">
                         <p>Death Note [Hindi-Tamil-Telugu-Eng-Jap] Multi Audio 480p, 720p &amp; 1080p HD WEB-DL | 10bit HEVC ESub</p>
@@ -280,7 +348,7 @@
                 </div>
                 <div class="anime2">
                     <a href="./Naruto.html">
-                        <img src="../utils/Naruto(1).jpg" alt="Naruto">
+                        <img src="./utils/Naruto(1).jpg" alt="Naruto">
                     </a>
                     <a href="./Naruto.html">
                         <p>Naruto Season 1 [Hindi-Tamil-Telugu-Eng-Jap] Multi-Audio 480p, 720p &amp; 1080p HD WEB-DL | 10bit HEVC ESub</p>
@@ -288,7 +356,7 @@
                 </div>
                 <div class="anime3">
                     <a href="./DS.html">
-                        <img src="../utils/Demon Slayer(1).jpg" alt="Demon Slayer">
+                        <img src="./utils/Demon Slayer(1).jpg" alt="Demon Slayer">
                     </a>
                     <a href="./DS.html">
                         <p>Demon Slayer Season 1 [Hindi-Tamil-Telugu-Eng-Jap] Multi-Audio 480p, 720p &amp; 1080p HD WEB-DL | 10bit HEVC ESub</p>
@@ -303,7 +371,7 @@
                 <hr>
             </div>
             <div class="author_info">
-                <img src="../utils/Author Info.jpeg" alt="Author Image">
+                <img src="./utils/Author Info.jpeg" alt="Author Image">
                 <div class="text">
                     <h5>Hetuk Patel</h5>
                     <br>
@@ -333,11 +401,11 @@
                     <h6>Follow Me</h6>
                     <hr class="hr_1">
                     <div class="icons">
-                        <img src="../utils/Discord.svg" alt="Discord Icon">
-                        <img src="../utils/Telegram.svg" alt="Telegram Icon">
-                        <img src="../utils/Facebook (1).png"
+                        <img src="./utils/Discord.svg" alt="Discord Icon">
+                        <img src="./utils/Telegram.svg" alt="Telegram Icon">
+                        <img src="./utils/Facebook (1).png"
                             alt="Facebook Icon">
-                        <img src="../utils/Youtube.png" alt="Youtube Icon">
+                        <img src="./utils/Youtube.png" alt="Youtube Icon">
                     </div>
                     <h5>Latest Uploads</h5>
                     <hr class="hr_2">
@@ -390,11 +458,11 @@
                     </div>
                     <h4>Join Us On Discord</h4>
                     <hr class="hr_3">
-                    <img src="../utils/Join_Us_Discord.png"
+                    <img src="./utils/Join_Us_Discord.png"
                         alt="Join Us Discord" class="discord">
                     <h3>Join Us On Telegram</h3>
                     <hr class="hr_4">
-                    <img src="../utils/Join_Us_Telegram.png"
+                    <img src="./utils/Join_Us_Telegram.png"
                         alt="Join Us On Telegram" class="telegram">
                     <h2>Advertisement</h2>
                     <hr class="hr_5">
@@ -406,8 +474,8 @@
             <p class="text1">Copyright © 2012-2025. All Rights Reserved by
                 <a>HETUKANIME4ALL</a>.</p>
             <div class="footer_img">
-                <img src="../utils/Facebook.svg" alt="Facebook">
-                <img src="../utils/Youtube.png" alt="Youtube" class="image">
+                <img src="./utils/Facebook.svg" alt="Facebook">
+                <img src="./utils/Youtube.png" alt="Youtube" class="image">
             </div>
         </div>
             </div>
