--- a/Anime Website/DN.html
+++ b/Anime Website/DN.html
@@ -3,8 +3,8 @@
     <head>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <link rel="stylesheet" href="../CSS/SL.css">
-        <title>Hetuk Anime Website Solo Leveling Page</title>
+        <link rel="stylesheet" href="./CSS/DN.css">
+        <title>Hetuk Anime Website Death Note Page</title>
     </head>
     <body>
         <header class="title">
@@ -91,51 +91,45 @@
                 </ul>
             </div>
             <div class="child2">
-                <img src="../utils/Facebook.svg" alt="Facebook Logo">
-                <img src="../utils/Youtube.png" alt="Youtube Logo"
+                <img src="./utils/Facebook.svg" alt="Facebook Logo">
+                <img src="./utils/Youtube.png" alt="Youtube Logo"
                     class="image">
             </div>
         </nav>
         <div class="parent">
             <div class="child3">
                 <div class="info">
-                    <p class="p1">Crunchyroll</p><span>•</span>
                     <p class="p2">Animated Series</p><span>•</span>
                     <p class="p3">Anime</p><span>•</span>
-                    <p class="p4">completed</p><span>•</span>
-                    <p class="p5">hindi dub</p><span>•</span>
-                    <p class="p6">tamil dub</p><span>•</span>
-                    <p class="p7">telugu dub</p>
+                    <p class="p4">completed</p>
                 </div>
-                <h5>Solo Leveling Season 2: Arise from the Shadow
-                    [Hindi-<br>Tamil-Telugu-Eng-Jap] Multi Audio 480p, 720p &
-                    1080p<br>
-                    HD WEB-DL | 10bit HEVC ESub</h5>
+                <h5>Death Note Season 1[Hindi-Eng-Jap]<br> Multi Audio 480p, 720p &
+                    1080p
+                    HD WEB-DL | 10bit<br> HEVC ESub</h5>
                 <div class="time">
                     <div class="date">
-                        <img src="../utils/Clock.svg"
+                        <img src="./utils/Clock.svg"
                             alt="clock image" class="clock">
                         <p>April 20, 2025</p>
                     </div>
                     <div class="source">
-                        <img src="../utils/Profile.svg"
+                        <img src="./utils/Profile.svg"
                             alt="Source Image" class="profile">
                         <p>Hetuk Patel</p>
                     </div>
                 </div>
                 <h4>||Untouched AAC 2.0 Multi Audio Crunchyroll Dub||</h4>
-                <h4 class="black">[1080p | 720p | 480p | Hindi - Tamil - Telugu
-                    - English -
+                <h4 class="black">[1080p | 720p | 480p | Hindi - English -
                     Japanese | WEB-DL | ESub]</h4>
-                <img src="../utils/Solo Leveling.jpg" alt="Solo Leveling" class="image1">
+                <img src="./utils/Death Note.jpg" alt="Death Note" class="image1">
                 <div class="anime_info">
                 <div class="genre">
                     <p class="red">Genre:</p>
-                    <p class="bold">Animation | Action | Adventure</p>
+                    <p class="bold">Action | Crime | Drama</p>
                 </div>
                 <div class="org">
                     <p class="red">Org. Run:</p>
-                    <p class="bold">TV Series(2024-2025)</p>
+                    <p class="bold">TV Series(2006-2007)</p>
                 </div>
                 <div class="run">
                     <p class="red">Running Time:</p>
@@ -143,19 +137,19 @@
                 </div>
                 <div class="lang">
                     <p class="red">Language:</p>
-                    <p class="bold">Japanese - English - Tamil - Telugu - <a class="green">Hindi 2.0</a> [Org. CR WEB Audio]</p>
+                    <p class="bold">Japanese - English - <a class="green">Hindi 2.0</a> [Org. CR WEB Audio]</p>
                 </div>
                 <div class="episodes">
                     <p class="red">Episodes:</p>
-                    <p class="bold">13</p>
+                    <p class="bold">37</p>
                 </div>
                 <div class="sub">
                     <p class="red">Subtitle:</p>
-                    <p class="bold">English {ASS} [Softcoded]</p>
+                    <p class="bold">English [Softcoded]</p>
                 </div>
                 <div class="quality">
                     <p class="red">Quality:</p>
-                    <p class="bold">1080p FHD | 720p HD | 480p WEB-DL</p>
+                    <p class="bold">1080p FHD | 720p HD | 480p x265 10bit BDRip</p>
                 </div>
                 <div class="encoder">
                     <p class="red">Encoder:</p>
@@ -163,67 +157,27 @@
                 </div>
                 <div class="synopsis">
                     <p class="red">Synopsis:</p>
-                    <p class="bold_1">In a world of gifted hunters and monsters, a weak hunter Sung Jinwoo gains extraordinary powers through a <br>mysterious program, leading him to become one of the strongest hunters and conquering even the strongest dungeons.</p>
+                    <p class="bold_1">An intelligent high school student goes on a secret crusade to eliminate criminals from the world after discovering a<br> notebook capable of killing anyone whose name is written into it.</p>
                 </div>
             </div>
+            <p class="sl">||Download Death Note Season 1 Episodes in Multi Audio||</p>
             <div class="screenshot">
-                <p class="small">⇒ screenshots here</p>
-                <p class="bold_2">+</p>
+                <img src="./utils/Screens-1.png" alt="Screen" class="screen">
+                <img src="./utils/ScreenShot.jpg" alt="ScreenShot" class="screenshot1">
+                <img src="./utils/Downloadlogo.png" alt="Download Logo">
             </div>
-            <hr class="ss">
-            <p class="sl">||Download Solo Leveling Season 2 Episodes in Hindi Multi Audio||</p>
             <div class="episode1">
-                <p>season 2</p>
+                <p>||Single Episodes Download Link||</p>
                 <div class="episode1_2 open-popup-btn">
-                    <p class="small_1">Episode 1</p>
+                    <p class="small_1">⇒ 480p HEVC 10bit Vorbis 2.0 68MB Each</p>
                     <p class="bold_2">+</p>
                 </div>
                 <div class="episode1_1 open-popup-btn">
-                    <p class="small_1">Episode 2</p>
+                    <p class="small_1">⇒ 720p HEVC 10bit Opus 2.0 110MB Each</p>
                     <p class="bold_2">+</p>
                 </div>
                 <div class="episode1_1 open-popup-btn">
-                    <p class="small_1">Episode 3</p>
-                    <p class="bold_2">+</p>
-                </div>
-                <div class="episode1_1 open-popup-btn">
-                    <p class="small_1">Episode 4</p>
-                    <p class="bold_2">+</p>
-                </div>
-                <div class="episode1_1 open-popup-btn">
-                    <p class="small_1">Episode 5</p>
-                    <p class="bold_2">+</p>
-                </div>
-                <div class="episode1_1 open-popup-btn">
-                    <p class="small_1">Episode 6</p>
-                    <p class="bold_2">+</p>
-                </div>
-                <div class="episode1_1 open-popup-btn">
-                    <p class="small_1">Episode 7</p>
-                    <p class="bold_2">+</p>
-                </div>
-                <div class="episode1_1 open-popup-btn">
-                    <p class="small_1">Episode 8</p>
-                    <p class="bold_2">+</p>
-                </div>
-                <div class="episode1_1 open-popup-btn">
-                    <p class="small_1">Episode 9</p>
-                    <p class="bold_2">+</p>
-                </div>
-                <div class="episode1_1 open-popup-btn">
-                    <p class="small_1">Episode 10</p>
-                    <p class="bold_2">+</p>
-                </div>
-                <div class="episode1_1 open-popup-btn">
-                    <p class="small_1">Episode 11</p>
-                    <p class="bold_2">+</p>
-                </div>
-                <div class="episode1_1 open-popup-btn">
-                    <p class="small_1">Episode 12</p>
-                    <p class="bold_2">+</p>
-                </div>
-                <div class="episode1_1 open-popup-btn">
-                    <p class="small_1">Episode 13 {NEW}</p>
+                    <p class="small_1">⇒ 1080p HEVC 10bit DD2.0 242MB Each</p>
                     <p class="bold_2">+</p>
                 </div>
             </div>
@@ -234,14 +188,21 @@
             </div>
             <div class="zip1">
             <p class="zip">||Complete Pack Single Zip File||</p>
+            
             <div class="episode1_3 open-popup-btn">
-                <p class="small_1">Zip Files Single Download Links</p>
+                <p class="small_1">480p HEVC Complete Pack</p>
+                <p class="bold_2">+</p>
+            </div>
+            <div class="episode1_3 open-popup-btn">
+                <p class="small_1">720p HEVC Complete Pack</p>
+                <p class="bold_2">+</p>
+            </div>
+            <div class="episode1_3 open-popup-btn">
+                <p class="small_1">1080p HEVC Complete Pack</p>
                 <p class="bold_2">+</p>
             </div>
             </div>
-            <p class="add">COMPLETE SEASON 2 ADDED</p>
-            <p class="season1">Download Season 1</p>
-            <p class="watch_on">Watch On Crunchyroll & Support Anime in India.</p>
+            <p class="add">COMPLETE SERIES ADDED</p>
             <div class="click">
                 <p>how to download movies and series from here?</p>
                 <p class="red">click here</p>
@@ -271,16 +232,16 @@
             </div>
             <div class="like_anime">
                 <div class="anime1">
-                    <a href="./DN.html">
-                        <img src="../utils/Death Note(1).jpg" alt="Death Note">
+                    <a href="./SL.html">
+                        <img src="./utils/Solo Leveling(1).jpg" alt="Solo Leveling">
                     </a>
-                    <a href="./DN.html">
-                        <p>Death Note [Hindi-Tamil-Telugu-Eng-Jap] Multi Audio 480p, 720p &amp; 1080p HD WEB-DL | 10bit HEVC ESub</p>
+                    <a href="./SL.html">
+                        <p>Solo Leveling [Hindi-Tamil-Telugu-Eng-Jap] Multi Audio 480p, 720p &amp; 1080p HD WEB-DL | 10bit HEVC ESub</p>
                     </a>
                 </div>
                 <div class="anime2">
                     <a href="./Naruto.html">
-                        <img src="../utils/Naruto(1).jpg" alt="Naruto">
+                        <img src="./utils/Naruto(1).jpg" alt="Naruto">
                     </a>
                     <a href="./Naruto.html">
                         <p>Naruto Season 1 [Hindi-Tamil-Telugu-Eng-Jap] Multi-Audio 480p, 720p &amp; 1080p HD WEB-DL | 10bit HEVC ESub</p>
@@ -288,7 +249,7 @@
                 </div>
                 <div class="anime3">
                     <a href="./DS.html">
-                        <img src="../utils/Demon Slayer(1).jpg" alt="Demon Slayer">
+                        <img src="./utils/Demon Slayer(1).jpg" alt="Demon Slayer">
                     </a>
                     <a href="./DS.html">
                         <p>Demon Slayer Season 1 [Hindi-Tamil-Telugu-Eng-Jap] Multi-Audio 480p, 720p &amp; 1080p HD WEB-DL | 10bit HEVC ESub</p>
@@ -303,7 +264,7 @@
                 <hr>
             </div>
             <div class="author_info">
-                <img src="../utils/Author Info.jpeg" alt="Author Image">
+                <img src="./utils/Author Info.jpeg" alt="Author Image">
                 <div class="text">
                     <h5>Hetuk Patel</h5>
                     <br>
@@ -333,19 +294,21 @@
                     <h6>Follow Me</h6>
                     <hr class="hr_1">
                     <div class="icons">
-                        <img src="../utils/Discord.svg" alt="Discord Icon">
-                        <img src="../utils/Telegram.svg" alt="Telegram Icon">
-                        <img src="../utils/Facebook (1).png"
+                        <img src="./utils/Discord.svg" alt="Discord Icon">
+                        <img src="./utils/Telegram.svg" alt="Telegram Icon">
+                        <img src="./utils/Facebook (1).png"
                             alt="Facebook Icon">
-                        <img src="../utils/Youtube.png" alt="Youtube Icon">
+                        <img src="./utils/Youtube.png" alt="Youtube Icon">
                     </div>
                     <h5>Latest Uploads</h5>
                     <hr class="hr_2">
                     <div class="uploads">
                         <p>
-                            Solo Leveling Season 2: Arise from the Shadow
-                            [Hindi-Tamil-Telugu-Eng-Jap] Multi Audio 480p, 720p
-                            &amp; 1080p HD WEB-DL | 10bit HEVC ESub
+                            <a href="./SL.html">
+                                Solo Leveling Season 2: Arise from the Shadow
+                                [Hindi-Tamil-Telugu-Eng-Jap] Multi Audio 480p, 720p
+                                &amp; 1080p HD WEB-DL | 10bit HEVC ESub
+                            </a>
                         </p>
                         <p>
                             <a href="./DS.html">
@@ -374,13 +337,11 @@
                             </a>
                         </p>
                         <p>
-                            <a href="./DN.html">
                                 Death Note Season 01
                                 [Hindi-Tamil-Telugu-Eng-Jap]
                                 Multi Audio 480p, 720p &amp; 1080p HD WEB-DL |
                                 10bit
                                 HEVC ESub
-                            </a>
                         </p>
                         <p>
                             <a href="./AOT.html">
@@ -390,11 +351,11 @@
                     </div>
                     <h4>Join Us On Discord</h4>
                     <hr class="hr_3">
-                    <img src="../utils/Join_Us_Discord.png"
+                    <img src="./utils/Join_Us_Discord.png"
                         alt="Join Us Discord" class="discord">
                     <h3>Join Us On Telegram</h3>
                     <hr class="hr_4">
-                    <img src="../utils/Join_Us_Telegram.png"
+                    <img src="./utils/Join_Us_Telegram.png"
                         alt="Join Us On Telegram" class="telegram">
                     <h2>Advertisement</h2>
                     <hr class="hr_5">
@@ -406,8 +367,8 @@
             <p class="text1">Copyright © 2012-2025. All Rights Reserved by
                 <a>HETUKANIME4ALL</a>.</p>
             <div class="footer_img">
-                <img src="../utils/Facebook.svg" alt="Facebook">
-                <img src="../utils/Youtube.png" alt="Youtube" class="image">
+                <img src="./utils/Facebook.svg" alt="Facebook">
+                <img src="./utils/Youtube.png" alt="Youtube" class="image">
             </div>
         </div>
             </div>
